# configzen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/configzen/: __init__.py  core.py  parsers.py
tests/: test_core.py
